[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://fonts/mplus-2p-medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Cards" type="Node2D" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 60.0
margin_top = 870.0
margin_right = 350.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 1 )
text = "Back to Menu"

[node name="Card1Name" type="RichTextLabel" parent="."]
margin_left = 440.0
margin_top = 780.0
margin_right = 940.0
margin_bottom = 910.0
custom_fonts/normal_font = SubResource( 2 )
text = "Card 1"

[node name="Card2Name" type="RichTextLabel" parent="."]
margin_left = 1100.0
margin_top = 780.0
margin_right = 1600.0
margin_bottom = 910.0
custom_fonts/normal_font = SubResource( 2 )
text = "Card 2"

[node name="CardCompare" type="RichTextLabel" parent="."]
margin_left = 900.0
margin_top = 780.0
margin_right = 1400.0
margin_bottom = 910.0
custom_fonts/normal_font = SubResource( 2 )
text = "??"

[node name="Matches" type="RichTextLabel" parent="."]
margin_left = 1170.0
margin_top = 890.0
margin_right = 1670.0
margin_bottom = 990.0
custom_fonts/normal_font = SubResource( 3 )
text = "Number of Matches: 0"

[node name="Wait" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
